Bug 1073290 - Don't render with displayports if we're not painting to the window. r=mattwoodrow, a=bajaj